refactor(service): 优化文章评论服务实现
- 将 Collectors.toList() 替换为 List.of() 方法调用
- 提升代码简洁性和性能表现